# rust_tracer

./: Cargo.toml  README.md
images/: README.md
src/: image.rs  main.rs
src/objects/: camera.rs  image.rs  mod.rs
src/primitives/: color.rs  mod.rs  ray.rs  vec.rs  vector.rs
src/shapes/: hitrecord.rs  hittable.rs  material.rs  mod.rs  sphere.rs
src/vec3/: color.rs  point.rs
