[package]
name = "ray_tracing_in_a_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
image = "0.23"
rayon = "1.5"
rand = "0.8"
winit = "0.26"
wgpu = "0.12"
pixels = "0.9"

# wasm-bindgen = "0.2"
# getrandom = { version = "0.2", features = ["js"] }

# [profile.release]
# opt-level = "s"

# [lib]
# crate-type = ["cdylib", "rlib"]